--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <title>Natours | Exciting tours for adventurois people</title>
 </head>
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">MENU</label>
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation_list">
+                <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Your benfits</a></li>
+
+                <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
+
+                <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+
+                <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+
+            </ul>
+        </nav>
+    </div>
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" alt="header__logo" class="Logo">
@@ -325,5 +343,30 @@
 
         </section>
     </main>
+    <footer class="footer">
+<div class="footer__logo-box">
+    <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+    <div class="row">
+        <div class="col-1-of-2">
+            <div class="footer__navigation">
+                <ul class="footer__list">
+                    <li class="footer_item"> <a href="#"class="footer__link">Company</a></li>
+                    <li class="footer_item"> <a href="#"class="footer__link">Contact us </a></li>
+                    <li class="footer_item"> <a href="#"class="footer__link">Cariers</a></li>
+                    <li class="footer_item"> <a href="#"class="footer__link">Privacy</a></li>
+                    <li class="footer_item"> <a href="#"class="footer__link">Terms</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright">
+                Built my <a href="#" class="footer__link">Ketevan</a> for this course <a href="#" class="footer__link">Advances CSS and SASS</a>. Copyright &copy; by Ketevan. You are 100% allowed to use this webpage fot both personal and commercial use, but NOT to claim it as your own design. A credit to the original author, is of course highly appreciated! 
+            </p>
+        </div>
+
+    </div>
+</div>
+    </footer>
 </body>
 </html>
