--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="heading-primary--main">Outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
     
@@ -116,7 +116,7 @@
                     </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popilar tours
@@ -153,7 +153,7 @@
                                 <div class="card__price-box">
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
 
                             </div>
@@ -190,7 +190,7 @@
                                 <div class="card__price-box">
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
 
                             </div>
@@ -227,7 +227,7 @@
                                 <div class="card__price-box">
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
 
                             </div>
@@ -370,9 +370,21 @@
     </div>
 </div>
     </footer>
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
-            POPUP
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Impotant &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, qui et tenetur, ullam explicabo praesentium ipsum rerum dolorum aut placeat sunt magni necessitatibus autem quia aspernatur expedita ipsa minima molestiae tenetur, ullam explicabo praesentium ipsum rerum dolorum aut placeat sunt magni necessitatibus autem quia aspernatur expedita ipsa minima molestiaedita ipsa minima molestiae tenetur, ullam explicabo praesentium ipsum rerum dolorum aut placeat sunt magni necessitatibus autem quia aspernatur expedita ipsa minima molestdita ipsa minima molestiae tenetur, ullam explicabo praesentium ipsum rerum dolorum aut placeat sunt magni necessitatibus autem quia aspernatur expedita ipsa minima molest
+                    <a href="" class="btn btn--green">Book now</a>
+                </p>
+            </div>
         </div>
     </div>
 </body>
