--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         </div>
         <div class="col-1-of-2">
             <p class="footer__copyright">
-                Built my <a href="#" class="footer__link">Ketevan</a> for this course <a href="#" class="footer__link">Advances CSS and SASS</a>. Copyright &copy; by Ketevan. You are 100% allowed to use this webpage fot both personal and commercial use, but NOT to claim it as your own design. A credit to the original author, is of course highly appreciated! 
+                Built my <a href="#" class="footer__link">Ketevan's website</a> for this course <a href="#" class="footer__link">Advances CSS and SASS</a>. Copyright &copy; by Jonas Schmedtmann. 
             </p>
         </div>
 
